se agrego el enlace que redirecciona a la pagina de la uniboyaca en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <title>index</title>
     </head>
     <body>
-        <h1>
-            Hola Git
-        </h1>
+        <h1> Hola Git</h1>
+        <a href="https://uniboyaca.edu.co">ir a la pagina uniboyaca</a>
     </body>
 </html>
