se genero un mensaje el cual indica el tiempo que falta para que la clase termine

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1> Hola Git</h1>
         <a href="https://uniboyaca.edu.co">ir a la pagina uniboyaca</a>
+        <h2>faltan 30 min</h2>
     </body>
 </html>
